k8s/domains/identity/components/ui/infra/overlays/ephemeral/identity-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: identity-ui-depl
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: identity-ui
